<resources>
    <string name="app_name">DKSearch</string>
    <string name="now_loading">Loading…</string>
    <string name="hht_today_seek">今日探索</string>
    <string name="hht_goods_sale">商品售卖机</string>
    <string name="hht_change_cloth">换衣服</string>
    <string name="hht_magic_potion">神奇药水</string>
    <string name="hht_concert_2">音乐会</string>
    <string name="hht_concert_3">交响乐团</string>
    <string name="hht_concert_4">昆虫音乐会</string>
    <string name="hht_concert">演奏乐器</string>
    <string name="hht_sign2">小小商场</string>
    <string name="hht_amusement_park">美食转盘</string>
    <string name="hht_nut">坚果与果仁</string>
    <string name="hht_amusement_park_1">欢乐游乐场</string>
    <string name="hht_fruit_2">罐装饮料</string>
    <string name="hht_fruit_4">现切水果</string>
    <string name="hht_sign_3">辨认标志</string>
    <string name="hht_fruit_3">捏水果游戏</string>
    <string name="hht_apply_actor">应聘演员</string>
    <string name="hht_on_playground">在操场上</string>
    <string name="hht_small_waiter">小小服务员</string>
    <string name="hht_listen">听一听</string>
    <string name="hht_bus">公交车站</string>
    <string name="hht_outing">郊游</string>
    <string name="hht_psychology_mini_game">心理学小游戏</string>
    <string name="hht_guest">做客</string>
    <string name="hht_guess">猜猜我是谁</string>
    <string name="hht_top_player">头号玩家</string>
    <string name="hht_twist_egg">一起去扭蛋</string>
    <string name="hht_toy_allocation">玩具分配</string>
    <string name="hht_find_details">找细节</string>
    <string name="hht_find_diff">找不同</string>
    <string name="hht_electrical">清点电器</string>
    <string name="hht_kitty_room">猫咪小窝</string>
    <string name="hht_furniture_adventure">家具大冒险</string>
    <string name="hht_household_expert">家务小能手</string>
    <string name="hht_decorate_bedroom">布置卧室</string>
    <string name="hht_take_care_baby">照顾小宝宝</string>
    <string name="hht_ventilate">通风</string>
    <string name="hht_manager">我是店长</string>
    <string name="hht_wardrobe">哥哥的衣柜</string>
    <string name="hht_take_cloth">收衣服</string>
    <string name="hht_father_christmas">圣诞老人小助手</string>
    <string name="hht_exchange_cloth">换装游戏</string>
    <string name="hht_tailor">搞怪小裁缝</string>
    <string name="hht_function">谁的作用大</string>
    <string name="hht_office_supplies">办公用品小达人</string>
    <string name="hht_read_book">看书的顺序</string>
    <string name="hht_cooking_dinner">做晚餐</string>
    <string name="hht_fried_steak">煎牛排</string>
    <string name="hht_sink">洗碗池</string>
    <string name="hht_open_rice">开饭啦</string>
    <string name="hht_water_origin">水从哪里来</string>
    <string name="hht_shoppy">超市购物</string>
    <string name="hht_do_hair">打理头发</string>
    <string name="hht_wash_cloth">洗衣服</string>
    <string name="hht_washhouse_supplies">洗衣房用品</string>
    <string name="hht_general_cleaning">大扫除</string>
    <string name="hht_find_same">找相同</string>
    <string name="hht_make_blind_box">制作盲盒</string>
    <string name="hht_dress_game">装扮游戏</string>
    <string name="study_body_one_title">小朋友，一起来了解我们的身体吧！</string>
    <string name="study_emotion_title">小朋友，一起来认知我们的情绪和感觉吧！</string>
    <string name="study_action_title">小朋友，让我们动起来！</string>
    <string name="study_toy_title">小朋友，一起玩玩具吧！</string>
    <string name="study_room_title">小朋友，一起去客厅坐会儿吧！</string>
    <string name="study_bedroom_title">小朋友，一起来认识卧室用品吧！</string>
    <string name="study_street_title">小朋友，一起去逛街吧！</string>
    <string name="study_fruit_title">小朋友，一起来认识水果吧！</string>
    <string name="study_amusement_title">小朋友，一起来游玩吧！</string>
    <string name="study_nut_title">小朋友，一起来认识坚果吧！</string>
    <string name="study_sign_title">小朋友，一起来认识这些标志吧！</string>
    <string name="study_supermark_title">小朋友，一起去购物吧！</string>
    <string name="study_concert_two_title">小朋友，一起来认识乐器吧！</string>
    <string name="study_concert_title">小朋友，一起来认识乐器吧！</string>
    <string name="study_fruit_title_2">去购买不同口味的罐装饮料吧！</string>
    <string name="study_fruit_title_3">用彩泥来捏水果吧！</string>
    <string name="study_fruit_title_4">一起辨别水果切开后的样子吧！</string>
    <string name="study_sign_title_2">你认识这些标志了吗？挑战一下吧！</string>
    <string name="study_concert_title_three">小朋友，一起来听音乐会吧！！</string>
    <string name="study_cloth_title">小朋友，一起来认识服装吧！</string>
    <string name="study_study_title">小朋友，一起来书房里坐坐吧！</string>
    <string name="study_kitchen_title">小朋友，一起来认识厨房用具吧！</string>
    <string name="study_bathroom_title">小朋友，一起来认识浴室用品吧！</string>
    <string name="study_washhouse_title">小朋友，一起去洗衣服吧！</string>
    <string name="study_birthday_title">小朋友，一起来参加生日派对吧！</string>
    <string name="study_concert_title_two">一起聆听音乐吧！</string>
    <string name="study_concert_title_four">一起来听交响乐吧！</string>
    <string name="exercise_exercise_six_title">把相片装裱在相框里吧！</string>
    <string name="exercise_supermark_title">大家聚集在收银台这里做什么呢?</string>
    <string name="exercise_supermark_two_title">动物朋友来了，那就一起分享零食吧！</string>
    <string name="exercise_supermark_three_title">尽情享受烤肉吧！</string>
    <string name="exercise_exercise_three_title">把失物交还到失主手上吧！</string>
    <string name="exercise_exercise_two_title">带小动物们去他们想去的地方吧！</string>
    <string name="exercise_exercise_one_title">这些建筑在哪里呢？</string>
    <string name="exercise_exercise_four_title">街道上都有哪些东西呢？找找看！</string>
    <string name="exercise_body_one_title">下列物品跟哪个器官相关联呢？</string>
    <string name="exercise_body_two_title">售卖机里有好多商品呀，它们应该穿戴在哪里呢？</string>
    <string name="exercise_body_three_title">小朋友衣服脏了，给他换身干净衣服吧！</string>
    <string name="exercise_body_four_title">你能根据影子认出他们吗？</string>
    <string name="exercise_emotion_one_title">帮助女巫分类神奇的情绪药水吧！</string>
    <string name="exercise_concert_one_title">通过音乐家的演奏姿势，判断他们正在使用的是哪种乐器吧！</string>
    <string name="exercise_sign_one_title">快来熟悉商场的各种标志和设施吧！</string>
    <string name="exercise_amusement_park_one_title">快来玩美食转盘，赢取美味吧！</string>
    <string name="exercise_nut_one_title">坚果的哪些部分可以吃呢？</string>
    <string name="exercise_amusement_park_two_title">在游乐场里玩个痛快吧！</string>
    <string name="exercise_concert_three_title">昆虫举办了音乐会，快去欣赏吧！</string>
    <string name="exercise_emotion_two_title">只要做对了表情和动作就能当上小演员哦！</string>
    <string name="exercise_emotion_three_title">猜猜大家的情绪和感觉吧！</string>
    <string name="exercise_emotion_four_title">把正确的饮料送给客人吧！</string>
    <string name="exercise_action_one_title">你能听出来这些动作吗？</string>
    <string name="exercise_action_two_title">小动物们都在干什么呢？</string>
    <string name="exercise_action_three_title">小朋友们都在干什么呢？</string>
    <string name="exercise_action_four_title">猜猜小朋友都在想什么吧？</string>
    <string name="exercise_action_five_title">一起认识好朋友的家人吧！</string>
    <string name="exercise_toy_one_title">只有影子的话，你还能认出它们吗？</string>
    <string name="exercise_toy_two_title">打败飞镖大师和对弈高手吧！</string>
    <string name="exercise_toy_three_title">现在你有四次抽奖机会，去玩具店扭一扭吧！</string>
    <string name="exercise_toy_four_title">帮小动物们挑选玩具吧！</string>
    <string name="exercise_room_two_title">找出两张照片不同的地方吧！</string>
    <string name="exercise_room_three_title">帮忙清点一下电器吧！</string>
    <string name="exercise_room_four_title">找一找猫咪们都把哪里当成窝了吧！</string>
    <string name="exercise_bedroom_one_title">找一找家具的位置吧！</string>
    <string name="exercise_bedroom_two_title">一起来把床铺好吧！</string>
    <string name="exercise_bedroom_three_title">完成卧室用品的布置吧！</string>
    <string name="exercise_bedroom_four_title">把小宝宝哄好吧！</string>
    <string name="exercise_bedroom_five_title">勤通风，保持空气流通。</string>
    <string name="exercise_cloth_one_title">帮小动物们选择各种外套吧！</string>
    <string name="exercise_cloth_two_title">瞧瞧哥哥的衣柜里都有哪些衣服吧！</string>
    <string name="exercise_cloth_three_title">要下雨啦！快把衣服收起来！</string>
    <string name="exercise_cloth_four_title">帮助圣诞老人送礼物吧！</string>
    <string name="exercise_cloth_five_title">给小动物们换上合适的服装吧！</string>
    <string name="exercise_cloth_six_title">一起来DIY裤子吧！</string>
    <string name="exercise_study_one_title">书房里的用品们吵起来了！</string>
    <string name="exercise_study_two_title">办公室里有许多文件需要处理，加油！</string>
    <string name="exercise_study_three_title">小朋友来书房看书啦！</string>
    <string name="exercise_kitchen_one_title">看看大家都在厨房里忙啥！</string>
    <string name="exercise_kitchen_two_title">一起来煎又香又嫩的牛排吧！</string>
    <string name="exercise_kitchen_three_title">这些被泡沫遮住的餐具们，你还认识吗？</string>
    <string name="exercise_kitchen_four_title">把食物从电器里拿出来吧！</string>
    <string name="exercise_bathroom_one_title">水从哪里来，流到哪里去？</string>
    <string name="exercise_bathroom_two_title">一起购置浴室用品吧！</string>
    <string name="exercise_bathroom_three_title">洗完澡后，一起打理头发吧！</string>
    <string name="exercise_washhouse_one_title">洗衣机，拜托你把脏衣服洗干净吧！</string>
    <string name="exercise_washhouse_two_title">你认识哪些洗衣房用品呢？</string>
    <string name="exercise_washhouse_three_title">动物总动员，一起搞卫生！</string>
    <string name="exercise_birthday_one_title">你还认识它们吗？</string>
    <string name="exercise_birthday_two_title">把零食和果汁塞进盲盒里，送给朋友们吧！</string>
    <string name="exercise_birthday_three_title">好好装扮一番吧！</string>
    <string name="exercise_street_one_title">找建筑</string>
    <string name="exercise_street_two_title">指路游戏</string>
    <string name="exercise_street_three_title">失物招领</string>
    <string name="exercise_street_four_title">美丽的街道</string>
    <string name="exercise_street_five_title">与朋友集合</string>
    <string name="exercise_street_six_title">装裱相片</string>
    <string name="exercise_career_home_strategist_cn">家中小军师</string>
    <string name="exercise_career_help_everyone_cn">给大家想想办法吧！</string>
    <string name="exercise_career_ideal_cn">职业理想</string>
    <string name="exercise_career_listen_profession_cn">听一听小朋友们都想做什么职业吧！</string>
    <string name="exercise_career_find_tools_cn">找工具</string>
    <string name="exercise_career_help_find_tools_cn">帮大家找回工具吧！</string>
    <string name="exercise_career_invite_expert_cn">请专家</string>
    <string name="exercise_career_build_house_cn">爸爸要盖新房子，需要专业人员的帮忙！</string>
    <string name="exercise_career_make_movie_cn">拍电影</string>
    <string name="exercise_career_help_director_cn">帮导演选择人员吧！</string>
    <string name="exercise_school_classroom_cn">学校教室</string>
    <string name="exercise_school_find_classroom_cn">教室里都有什么呢？找找看吧！</string>
    <string name="exercise_school_artwork_cn">美术作品</string>
    <string name="exercise_school_art_class_cn">美术课结束了，看看大家都创作了什么吧？</string>
    <string name="exercise_school_my_desk_cn">我的课桌</string>
    <string name="exercise_school_find_desk_cn">课桌上都有什么呢？找找看吧！</string>
    <string name="organ_eye_ch">眼睛</string>
    <string name="organ_eye_en">eye</string>
    <string name="organ_mouth_ch">嘴巴</string>
    <string name="organ_mouth_en">mouth</string>
    <string name="organ_nose_ch">鼻子</string>
    <string name="organ_nose_en">nose</string>
    <string name="organ_ear_ch">耳朵</string>
    <string name="hht_stand_ch">站</string>
    <string name="hht_stand_en">stand</string>
    <string name="hht_sit_ch">坐</string>
    <string name="hht_sit_en">sit</string>
    <string name="hht_walk_ch">走</string>
    <string name="hht_walk_en">walk</string>
    <string name="hht_run_ch">跑</string>
    <string name="hht_run_en">run</string>
    <string name="hht_cube_ch">魔方</string>
    <string name="hht_cube_en">"Rubik's cube"</string>
    <string name="hht_windmill_ch">玩具风车</string>
    <string name="hht_windmill_en">windmill</string>
    <string name="hht_marble_ch">弹珠</string>
    <string name="hht_marble_en">marble</string>
    <string name="hht_top_ch">陀螺</string>
    <string name="hht_top_en">top</string>
    <string name="hht_quilt_ch">被子</string>
    <string name="hht_quilt_en">quilt</string>
    <string name="hht_blanket_ch">毯子</string>
    <string name="hht_blanket_en">blanket</string>
    <string name="hht_sheet_ch">被单</string>
    <string name="hht_sheet_en">sheet</string>
    <string name="hht_pillow_ch">枕头</string>
    <string name="hht_pillow_en">pillow</string>
    <string name="hht_jeans">牛仔裤\njeans</string>
    <string name="hht_pants">长裤\npants</string>
    <string name="hht_tracksuit">运动裤\ntracksuit bottoms</string>
    <string name="hht_overalls">背带工装裤\noveralls</string>
</resources>