<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_my_actions_front2">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="@dimen/dp_1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/titleTv"
        style="@style/exerciseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_80"
        android:background="@mipmap/bg_subject_title"
        android:gravity="center"
        android:text="@string/study_action_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/standIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_17"
        android:layout_marginEnd="@dimen/dp_55"
        android:src="@mipmap/img_stand"
        app:layout_constraintEnd_toEndOf="@+id/titleTv"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_60"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/standIv"
        app:layout_constraintStart_toEndOf="@+id/standIv">

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_stand_ch" />

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_stand_en" />
    </LinearLayout>

    <ImageView
        android:id="@+id/walkIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_62"
        android:layout_marginBottom="@dimen/dp_66"
        android:src="@mipmap/img_walk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/standIv" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_38"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/walkIv"
        app:layout_constraintEnd_toStartOf="@+id/walkIv"
        app:layout_constraintTop_toTopOf="@+id/walkIv">

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_walk_ch" />

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_walk_en" />
    </LinearLayout>

    <ImageView
        android:id="@+id/sitIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_45"
        android:src="@mipmap/img_sit"
        app:layout_constraintEnd_toStartOf="@+id/walkIv"
        app:layout_constraintTop_toTopOf="@+id/standIv" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_21"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/sitIv"
        app:layout_constraintEnd_toStartOf="@+id/sitIv"
        app:layout_constraintTop_toTopOf="@+id/sitIv">

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_sit_ch" />

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_sit_en" />
    </LinearLayout>

    <ImageView
        android:id="@+id/runIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_33"
        android:src="@mipmap/img_run"
        app:layout_constraintBottom_toBottomOf="@+id/walkIv"
        app:layout_constraintStart_toEndOf="@+id/standIv" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_28"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/runIv"
        app:layout_constraintStart_toEndOf="@+id/runIv"
        app:layout_constraintTop_toTopOf="@+id/runIv">

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_run_ch" />

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_run_en" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>