<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_in_the_bedroom_front2">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="@dimen/dp_1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/titleTv"
        style="@style/exerciseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_80"
        android:background="@mipmap/bg_subject_title"
        android:gravity="center"
        android:text="@string/study_bedroom_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/oneIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_65"
        android:src="@mipmap/img_quilt"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_43"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/oneIv"
        app:layout_constraintEnd_toStartOf="@+id/oneIv"
        app:layout_constraintTop_toTopOf="@+id/oneIv">

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_quilt_ch" />

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_quilt_en" />
    </LinearLayout>

    <ImageView
        android:id="@+id/twoIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_40"
        android:src="@mipmap/img_blanket"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/twoIv"
        app:layout_constraintStart_toEndOf="@+id/twoIv"
        app:layout_constraintTop_toTopOf="@+id/twoIv">

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_blanket_ch" />

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_blanket_en" />
    </LinearLayout>

    <ImageView
        android:id="@+id/threeIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_102"
        android:layout_marginBottom="@dimen/dp_73"
        android:src="@mipmap/img_sheet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fourIv" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_25"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/threeIv"
        app:layout_constraintEnd_toStartOf="@+id/threeIv"
        app:layout_constraintTop_toTopOf="@+id/threeIv">

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_sheet_ch" />

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_sheet_en" />
    </LinearLayout>

    <ImageView
        android:id="@+id/fourIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_86"
        android:src="@mipmap/img_pillow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/twoIv" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_26"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/fourIv"
        app:layout_constraintStart_toEndOf="@+id/fourIv"
        app:layout_constraintTop_toTopOf="@+id/fourIv">

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_pillow_ch" />

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_pillow_en" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>