<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_in_the_toy_room_front4">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="@dimen/dp_1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/titleTv"
        style="@style/exerciseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_80"
        android:background="@mipmap/bg_subject_title"
        android:gravity="center"
        android:text="@string/study_toy_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/oneIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_28"
        android:layout_marginTop="@dimen/dp_43"
        android:src="@mipmap/img_rubiks_cube"
        app:layout_constraintStart_toStartOf="@+id/titleTv"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_43"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/oneIv"
        app:layout_constraintEnd_toStartOf="@+id/oneIv"
        app:layout_constraintTop_toTopOf="@+id/oneIv">

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_cube_ch" />

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_cube_en" />
    </LinearLayout>

    <ImageView
        android:id="@+id/twoIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_23"
        android:src="@mipmap/img_windmill"
        app:layout_constraintEnd_toEndOf="@+id/titleTv"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_44"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/twoIv"
        app:layout_constraintStart_toEndOf="@+id/titleTv"
        app:layout_constraintTop_toTopOf="@+id/twoIv">

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_windmill_ch" />

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_windmill_en" />
    </LinearLayout>

    <ImageView
        android:id="@+id/threeIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_83"
        android:src="@mipmap/img_marble"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="@+id/oneIv"
        app:layout_constraintStart_toStartOf="@+id/oneIv" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_40"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/threeIv"
        app:layout_constraintEnd_toStartOf="@+id/threeIv"
        app:layout_constraintTop_toTopOf="@+id/threeIv">

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_marble_ch" />

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_marble_en" />
    </LinearLayout>

    <ImageView
        android:id="@+id/fourIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginBottom="@dimen/dp_81"
        android:src="@mipmap/img_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/twoIv" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_55"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/fourIv"
        app:layout_constraintStart_toEndOf="@+id/fourIv"
        app:layout_constraintTop_toTopOf="@+id/fourIv">

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_top_ch" />

        <TextView
            style="@style/contentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hht_top_en" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>