<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_clothing_front6">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="@dimen/dp_1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/titleTv"
        style="@style/exerciseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_80"
        android:background="@mipmap/bg_subject_title"
        android:gravity="center"
        android:text="@string/study_cloth_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/oneIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="@dimen/dp_20"
        android:src="@mipmap/img_jeans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

    <TextView
        style="@style/contentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_54"
        android:layout_marginEnd="@dimen/dp_26"
        android:text="@string/hht_jeans"
        app:layout_constraintEnd_toStartOf="@+id/oneIv"
        app:layout_constraintTop_toTopOf="@+id/oneIv" />

    <ImageView
        android:id="@+id/twoIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_82"
        android:src="@mipmap/img_pants"
        app:layout_constraintEnd_toEndOf="@+id/titleTv"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

    <TextView
        style="@style/contentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_55"
        android:text="@string/hht_pants"
        app:layout_constraintStart_toEndOf="@+id/twoIv"
        app:layout_constraintTop_toTopOf="@+id/twoIv" />

    <ImageView
        android:id="@+id/threeIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_79"
        android:src="@mipmap/img_tracksuit_bottoms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/twoIv" />

    <TextView
        style="@style/contentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_7"
        android:layout_marginBottom="@dimen/dp_56"
        android:text="@string/hht_tracksuit"
        app:layout_constraintBottom_toBottomOf="@+id/threeIv"
        app:layout_constraintEnd_toStartOf="@+id/threeIv" />

    <ImageView
        android:id="@+id/fourIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_73"
        android:src="@mipmap/img_overalls"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/twoIv" />

    <TextView
        style="@style/contentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_23"
        android:layout_marginBottom="@dimen/dp_62"
        android:text="@string/hht_overalls"
        app:layout_constraintBottom_toBottomOf="@+id/fourIv"
        app:layout_constraintStart_toEndOf="@+id/fourIv" />
</androidx.constraintlayout.widget.ConstraintLayout>